# QuickNet

./: CMakeLists.txt  CMakePresets.json  Interface.md  README.md  vcpkg-configuration.json  vcpkg.json
include/quicknet/: quicknet.h
include/quicknet/components/: Client.h  ConnectionManager.h  HttpServer.h  Server.h
src/: Client.cpp  ConnectionManager.cpp  HttpServer.cpp  Server.cpp
test/: CMakeLists.txt  main.cpp
